--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "git.ignoreLimitWarning": true,
-    "godotTools.editorPath.godot4": "/home/octo/Documents/Godot v4.3/Godot_v4.3-stable_mono_linux.x86_64"
+    "godotTools.editorPath.godot4": "/home/octo/Documents/Godot v4.3/Godot_v4.3-stable_mono_linux.x86_64",
+    "idf.pythonInstallPath": "/usr/bin/python"
 }
